--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,39 @@ name: Deploy SvelteKit to GitHub Pages
 
 on:
   push:
-    branches: ['main']   # redeploy every push to main
-  workflow_dispatch:     # allow manual runs
+    branches: ['main']
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣  Pull the repo
+      # 1. Check out the repo
       - uses: actions/checkout@v4
 
-      # 2️⃣  Install Node 20 and prime the Yarn cache
-      - name: Setup Node and Yarn cache
+      # 2. Install Node 20 (no yarn cache flag!)
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: yarn
 
-      # 3️⃣  Enable Corepack and activate Yarn 4
-      - name: Activate Yarn 4
+      # 3. Activate Yarn 4 via Corepack
+      - name: Enable Corepack & Yarn 4
         run: |
           corepack enable
-          corepack prepare yarn@4.9.2 --activate   # pin to the same Yarn you use locally
-          yarn --version                            # sanity check → 4.9.2
+          corepack prepare yarn@4.9.2 --activate
+          yarn --version          # should print 4.9.2
 
-      # 4️⃣  Install dependencies (respects nodeLinker: node-modules)
+      # 4. Install dependencies
       - name: Install dependencies
         run: yarn install --immutable
 
-      # 5️⃣  Build the static site (adapter-static ➜ ./build)
-      - name: Build the static site
+      # 5. Build the static site (adapter-static -> ./build)
+      - name: Build the site
         run: yarn build
 
-      # 6️⃣  Upload the build folder as the Pages artifact
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+      # 6. Upload build/ as the Pages artifact
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: build
 
@@ -47,7 +44,6 @@ jobs:
     permissions:
       pages: write
       id-token: write
-
     steps:
       - id: deployment
         name: Deploy to GitHub Pages
