--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,47 @@
+# .github/workflows/deploy.yml
 name: Deploy SvelteKit to GitHub Pages
 
 on:
   push:
-    branches: ['main']
-  workflow_dispatch:
+    branches: [main]        # redeploy every push to main
+  workflow_dispatch:        # allow manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      # 1. Check out the repo
+      # 1. Check out repository
       - uses: actions/checkout@v4
 
-      # 2. Install Node 20 (no yarn cache flag!)
-      - name: Setup Node
+      # 2. Install Node (no yarn cache flag!)
+      - name: Set up Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3. Activate Yarn 4 via Corepack
-      - name: Enable Corepack & Yarn 4
+      # 3. Enable Corepack and activate Yarn 4
+      - name: Activate Yarn 4
         run: |
           corepack enable
-          corepack prepare yarn@4.9.2 --activate
-          yarn --version          # should print 4.9.2
+          corepack prepare yarn@4.9.2 --activate     # pin to the version you use locally
+          yarn --version                              # should print 4.9.2
 
-      # 4. Install dependencies
+      # 4. Install dependencies (respects nodeLinker: node-modules)
       - name: Install dependencies
         run: yarn install --immutable
 
-      # 5. Build the static site (adapter-static -> ./build)
+      # 5. Pre-generate SvelteKit files (silences tsconfig warning)
+      - name: Generate SvelteKit types
+        run: yarn svelte-kit sync
+
+      # 6. Build the static site (adapter-static ➜ ./build)
       - name: Build the site
         run: yarn build
 
-      # 6. Upload build/ as the Pages artifact
-      - uses: actions/upload-pages-artifact@v3
+      # 7. Upload build/ as the Pages artifact
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: build
 
@@ -44,7 +51,9 @@ jobs:
     permissions:
       pages: write
       id-token: write
+
     steps:
       - id: deployment
         name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
+
