--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"dependencies": {
 		"@threlte/core": "^8.1.3",
+		"@threlte/extras": "^9.4.2",
 		"tailwind-merge": "^3.3.1",
 		"three": "^0.178.0"
 	}
