--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.525.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
@@ -23,6 +25,8 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/three": "^0.178.1",
+		"bits-ui": "^2.8.11",
+		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -32,7 +36,9 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
+		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
@@ -40,6 +46,7 @@
 	"dependencies": {
 		"@threlte/core": "^8.1.3",
 		"@threlte/extras": "^9.4.2",
+		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.3.1",
 		"three": "^0.178.0"
 	}
