--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@threlte/extras": "^9.4.2",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.178.0"
 	}
 }
