--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@eslint/js": "^9.18.0",
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.525.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
