Refactor: I'm never adding large JSONs again haha

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^24.1.0",
 		"@types/three": "^0.178.1",
 		"bits-ui": "^2.8.11",
 		"clsx": "^2.1.1",
@@ -39,14 +40,17 @@
 		"svelte-check": "^4.0.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
+		"tsx": "^4.20.3",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
+		"uuid": "^11.1.0",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
 		"@threlte/core": "^8.1.3",
 		"@threlte/extras": "^9.4.2",
+		"csv-parse": "^6.1.0",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
