--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.525.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/line-clamp": "^0.4.4",
@@ -48,6 +47,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.8.1",
 		"@threlte/core": "^8.1.3",
 		"@threlte/extras": "^9.4.2",
 		"csv-parse": "^6.1.0",
