--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.12.0",
+		"@prisma/extension-accelerate": "^2.0.2",
 		"@threlte/core": "^8.1.3",
 		"@threlte/extras": "^9.4.2",
 		"csv-parse": "^6.1.0",
+		"prisma": "^6.12.0",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
