--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@prisma/extension-accelerate": "^2.0.2",
 		"@threlte/core": "^8.1.3",
 		"@threlte/extras": "^9.4.2",
+		"@vercel/speed-insights": "^1.2.0",
 		"csv-parse": "^6.1.0",
 		"prisma": "^6.12.0",
 		"svelte-motion": "^0.12.2",
